# Medical-ChatBot

./: .gitignore  README.md  brain_of_doctor.py  design.md  main.py  pyproject.toml  requirements.txt  test_tts.py  test_video.py  voice_of_doctor.py  voice_of_patient.py
