[project]
name = "ai-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "deepgram-sdk>=7.5.0",
    "gradio>=6.20.0",
    "groq>=1.5.0",
    "pillow>=12.3.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "speechrecognition>=3.17.0",
]
